Fix z-index bug

--- a/app/app/client/shopfront/shopfront.import.less
+++ b/app/app/client/shopfront/shopfront.import.less
@@ -62,7 +62,6 @@
 			@highlightColor: #fafafa;
 
 			position: absolute;
-			z-index: 1;
 			top: 0;
 			left: 0;
 			width: 100%;
